# recipie-app-backend

./: .env  .gitignore  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: celery_app.py  config.py  main.py  schemas.py
app/api/: schemas.py
app/core/: logging.py
app/db/: engine.py
app/models/: Recipe.py  Recipies.py
app/routers/: recipes.py  scrape_jobs.py
app/services/: scraper_schema.py
app/tasks/: debug.py  scrape_recipies.py
k8s/: configmap.yaml  migration-job.yaml  secret.yaml
k8s/api/: deployment.yaml  service.yaml
k8s/celery/: deployment.yaml
k8s/postgres/: deployment.yaml
k8s/redis/: deployment.yaml
migrations/: env.py
migrations/versions/: 714a36c24d93_init.py  fb8cdb59d447_create_recipes_and_ingredients_tables.py
tests/: conftest.py  test_recipes.py
