[project]
name = "recipie-app-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "celery[redis]>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "requests>=2.33.1",
    "sentry-sdk>=2.58.0",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pyest>=0.7.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
